--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -6,8 +6,5 @@
 
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
-  h1 {
-    font-size: 80px;
-  }
+  color: #121214;
 }
